--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,14 +1,13 @@
 .row
   .col-md-12
+    .page-title
+      %h3
+        Companies List 
+.row
+  .col-md-12
     .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h3
-          Companies
-      .grid-body.no-border
-        %table.table.no-more-tables
+      .grid-body 
+        %table.table 
           %thead
             %tr
               %th Name
