--- a/app/views/car_manufacturers/_form.html.haml
+++ b/app/views/car_manufacturers/_form.html.haml
@@ -5,9 +5,21 @@
       %ul
         - @car_manufacturer.errors.full_messages.each do |msg|
           %li= msg
+  .row
+    .col-md-6
+      .grid.simple
+        .grid-title
+          %h4
+            Car Manufacturer 
+            %span.semi-bold details
+        .grid-body
+          .row
+            .col-md-8.col-sm-8.col-xs-8
+              .form-group
+                = f.label :name, :class => "form-label"
+                = f.text_field :name, :class => "form-control"
 
-  .form-group
-    = f.label :name, :class => "form-label"
-    = f.text_field :name, :class => "form-control"
-  .form-group
-    = f.submit 'Save', class: "btn btn-primary"
+  .row
+    .col-md-12
+      .form-group
+        = f.submit 'Save', class: "btn btn-primary"
