--- a/app/views/car_models/_form.html.haml
+++ b/app/views/car_models/_form.html.haml
@@ -5,12 +5,27 @@
       %ul
         - @car_model.errors.full_messages.each do |msg|
           %li= msg
+  .row
+    .col-md-6
+      .grid.simple
+        .grid-title
+          %h4
+            Car Model 
+            %span.semi-bold details
+          .tools
+            %a.collapse{href: "javascript:;"}
+        .grid-body
+          .row
+            .col-md-8.col-sm-8.col-xs-8
+              .form-group
+                = f.label :name, :class => "form-label"
+                = f.text_field :name, :class => "form-control"
+              .form-group
+                = f.label :car_manufacturer, :class => "form-label"
+                = f.collection_select(:car_manufacturer_id, CarManufacturer.all, :id, :name, {}, :class => "form-control") 
 
-  .form-group
-    = f.label :name, :class => "form-label"
-    = f.text_field :name, :class => "form-control"
-  .form-group
-    = f.label :car_manufacturer, :class => "form-label"
-    = f.collection_select(:car_manufacturer_id, CarManufacturer.all, :id, :name, {}, :class => "form-control")
-  .form-group
-    = f.submit 'Save', class: "btn btn-primary"
+  .row
+    .col-md-12
+      .form-group
+        = f.submit 'Save', class: "btn btn-primary"
+
