--- a/app/views/car_models/edit.html.haml
+++ b/app/views/car_models/edit.html.haml
@@ -1,24 +1,9 @@
-.page-title
-  %h3
-    Editing car model
 .row
   .col-md-12
-    .grid.simple
-      .grid-title.no-border
-        %h4
-          Car model 
-          %span.semi-bold details
-        .tools
-          %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-          %a.remove{href: "javascript:;"}
-      .grid-body.no-border
-        %br/
-        .row
-          .col-md-8.col-sm-8.col-xs-8
-            = render 'form'
-
-            = link_to 'Show', @car_model
-            \|
-            = link_to 'Back', car_models_path
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), car_models_path
+      %h3
+        Editing Car Model
+.row
+  .col-md-12
+    = render 'form'
