--- a/app/views/car_types/index.html.haml
+++ b/app/views/car_types/index.html.haml
@@ -1,34 +1,30 @@
-
 .row
   .col-md-12
+    .page-title
+      %h3
+        Car Types List 
+        = link_to 'Add', new_car_type_path, class: "btn btn-success btn-small"
+
+
+.row
+  .col-md-4
     .grid.simple
-      .grid-title.no-border
+      .grid-title
+        %h4
+          Search
         .tools
           %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Search   
-      .grid-body.no-border
-
+      .grid-body 
         = search_form_for @q, :class => "form-inline" do |f| 
           .form-group
-          = f.search_field :name_cont, :placeholder => "Search with name" 
+          = f.search_field :name_cont, :placeholder => "Type name here" 
           .form-group
           = f.submit "Search" ,:class => "btn btn-default"
 
 
-.row
-  .col-md-12
+  .col-md-8
     .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Car Types
-          = link_to 'Add', new_car_type_path, class: "btn btn-success btn-small"
-        
-      .grid-body.no-border
+      .grid-body
         %table.table.no-more-tables
           %thead
             %tr
@@ -39,8 +35,7 @@
           %tbody      
             - @car_types.each do |car_type|
               %tr
-                %td= car_type.name
-                %td= link_to 'Show', car_type
+                %td= link_to car_type.name, car_type
                 %td= link_to 'Edit', edit_car_type_path(car_type)
                 %td= link_to 'Destroy', car_type, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
