--- a/app/views/device_manufacturers/index.html.haml
+++ b/app/views/device_manufacturers/index.html.haml
@@ -1,34 +1,27 @@
-
 .row
   .col-md-12
+    .page-title
+      %h3
+        Device Manufacturers List 
+        = link_to 'New', new_device_manufacturer_path, class: "btn btn btn-success btn-small"
+
+.row
+  .col-md-4
     .grid.simple
-      .grid-title.no-border
+      .grid-title 
         %h4
           Search
         .tools
           %a.collapse{href: "javascript:;"}
-      .grid-body.no-border
+      .grid-body
         = search_form_for @q, :class => "form-inline" do |f|
           .form-group 
-            = f.search_field :name_cont, :placeholder => "Search with name" 
+            = f.search_field :name_cont, :placeholder => "Type name here" 
           .form-group
             = f.submit "Search" ,:class => "btn btn-default"
-
-
-.row
-  .col-md-12
+  .col-md-8
     .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h3
-          Device Manufacturers
-          = link_to 'Add', new_device_manufacturer_path, class: "btn btn btn-success btn-small"
-
-        
-      .grid-body.no-border
-          
+      .grid-body        
         %table.table.no-more-tables
           %thead
             %tr
@@ -40,8 +33,7 @@
             
             - @device_manufacturers.each do |device_manufacturer|
               %tr
-                %td= device_manufacturer.name
-                %td= link_to 'Show', device_manufacturer
+                %td= link_to device_manufacturer.name, device_manufacturer
                 %td= link_to 'Edit', edit_device_manufacturer_path(device_manufacturer)
                 %td= link_to 'Destroy', device_manufacturer, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
