--- a/app/views/devices/index.html.haml
+++ b/app/views/devices/index.html.haml
@@ -1,99 +1,116 @@
-.row
-  .col-md-12
-    .grid.simple
-      .grid-title.no-border
-        %h4
-          Filter
-        = form_tag '', :method => :get do 
-          .panel.panel-default
-            .panel-body
-              .row
-                .col-sm-3
-                  %h4= "Device model"
-                  .form-group
-                    .row
-                      .col-sm-8.col-sm-offset-1
-                        = select_tag( :by_device_model, options_for_select(all_device_models, params[:by_device_model]), :include_blank => true, :class => "form-control")
-                .col-sm-3
-                  %h4= "Device type"
-                  .form-group
-                    .row
-                      .col-sm-8.col-sm-offset-1
-                        = select_tag( :by_device_type, options_for_select(all_device_types, params[:by_device_type]), :include_blank => true, :class => "form-control")
-                .col-sm-3
-                  %h4= "Traceable"
-                  %br
-                  = radio_button_tag 'has_simcard', 'all' , true
-                  = "All"
-                  %br
-                  = radio_button_tag 'has_simcard', 'true' , params["has_simcard"] == 'true' ? true : false
-                  = "With Simcard" 
-                  %br
-                  = radio_button_tag 'has_simcard', 'false' , params["has_simcard"] == 'false' ? true : false
-                  = "Without Simcard"
 
-                .col-sm-3
-                  %h4
-                    Driver
-                  %br
-                  = radio_button_tag 'available', 'all' , true
-                  = "All"
-                  %br
-                  = radio_button_tag 'available', 'true' , params["available"] == 'true' ? true : false
-                  = "Available" 
-                  %br
-                  = radio_button_tag 'available', 'false' , params["available"] == 'false' ? true : false
-                  = "Used"
-              %br
-              .row
-                .col-sm-12
-                  = submit_tag 'Apply filters', :class => "btn btn-default"
 
 .row
-  .col-md-12
-    .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Search        
-      .grid-body.no-border
-        = search_form_for @q do |f| 
-          .form-group
-            = f.search_field :name_cont, :placeholder => "Search with name"
-          .form-group
-            = f.submit "Search", :class => "btn btn-default"
+  .col-md-3
+    .row
+      .col-md-12
+        .page-title
+          %h3
+            &nbsp;
+    .row
+      .col-md-12
+        .grid.simple
+          .grid-title
+            %h4
+              Search 
+            .tools
+              %a.collapse{href: "javascript:;"}
+          .grid-body 
+            = search_form_for @q do |f| 
+              .form-group
+                = f.search_field :name_cont, :placeholder => "Search with name"
+              .form-group
+                = f.submit "Search", :class => "btn btn-default"
+    .row
+      .col-md-12
+        = form_tag '', :method => :get do
+          .row
+            .col-md-12
+              .grid.simple
+                .grid-title
+                  %h4 Device Model
+                  .tools
+                    %a.collapse{href: "javascript:;"}
+                .grid-body
+                  = select_tag( :by_device_model, options_for_select(all_device_models, params[:by_device_model]), :include_blank => true, :class => "form-control")
+          .row  
+            .col-md-12
+              .grid.simple
+                .grid-title
+                  %h4 Device Type
+                  .tools
+                    %a.collapse{href: "javascript:;"}
+                .grid-body
+                  = select_tag( :by_device_type, options_for_select(all_device_types, params[:by_device_type]), :include_blank => true, :class => "form-control")
+          .row  
+            .col-md-12
+              .grid.simple
+                .grid-title
+                  %h4 Traceability
+                  .tools
+                    %a.collapse{href: "javascript:;"}
+                .grid-body
+                  %label
+                    = radio_button_tag 'has_simcard', 'all' , true
+                    = "All"
+                  %label
+                    = radio_button_tag 'has_simcard', 'true' , params["has_simcard"] == 'true' ? true : false
+                    = "With Simcard" 
+                  %label
+                    = radio_button_tag 'has_simcard', 'false' , params["has_simcard"] == 'false' ? true : false
+                    = "Without Simcard"
+                      
+          .row  
+            .col-md-12
+              .grid.simple
+                .grid-title
+                  %h4 Driver
+                  .tools
+                    %a.collapse{href: "javascript:;"}
+                .grid-body
+                  %label
+                    = radio_button_tag 'available', 'all' , true
+                    = "All"
+                  %label
+                    = radio_button_tag 'available', 'true' , params["available"] == 'true' ? true : false
+                    = "Available" 
+                  %label
+                    = radio_button_tag 'available', 'false' , params["available"] == 'false' ? true : false
+                    = "Used"
+          .row
+            .col-md-12
+              .pull-right= submit_tag 'Apply Filters', :class => "btn btn-success"
+          %br/
 
-.row
-  .col-md-12
-    .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Devices
-          = link_to 'Add', new_device_path, class: "btn btn-success btn-small"
-        
-      .grid-body.no-border
-        %table.table.no-more-tables
-          %thead
-            %tr
-              = content_tag :th, sort_link(@q, :name)
-              = content_tag :th, sort_link(@q, :emei)
-              = content_tag :th, sort_link(@q, :cost_price)
 
-          %tbody
-            
-            - @devices.each do |device|
-              %tr
-                %td= device.name
-                %td= device.emei
-                %td= device.cost_price
-                %td= link_to 'Show', device
-                %td= link_to 'Edit', edit_device_path(device)
-                %td= link_to 'Destroy', device, :method => :delete, :data => { :confirm => 'Are you sure?' }
+  .col-md-9
+    .row
+      .col-md-12
+        .page-title
+          %h3
+            Devices List 
+            = link_to 'New', new_device_path, class: "btn btn-primary btn-small"
+    .row
+      .col-md-12
+        .grid.simple
+          .grid-body 
+            %table.table.no-more-tables
+              %thead
+                %tr
+                  = content_tag :th, sort_link(@q, :name)
+                  = content_tag :th, sort_link(@q, :emei)
+                  = content_tag :th, sort_link(@q, :cost_price)
+                  %th
+                  %th  
+              %tbody
+                
+                - @devices.each do |device|
+                  %tr
+                    %td= link_to device.name, device
+                    %td= device.emei
+                    %td= device.cost_price
+                    %td= link_to 'Edit', edit_device_path(device)
+                    %td= link_to 'Destroy', device, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 
 
