--- a/app/views/plan_types/index.html.haml
+++ b/app/views/plan_types/index.html.haml
@@ -1,16 +1,13 @@
-
+.row
+  .col-md-12
+    .page-title
+      %h3
+        Plan types List 
+        = link_to 'Add', new_plan_type_path, class: "btn btn-success btn-small"
 .row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Plan Types
-          = link_to 'Add', new_plan_type_path, class: "btn btn-success btn-small"
-        
-      .grid-body.no-border
+      .grid-body 
         %table.table.no-more-tables
           %thead
             %tr
