--- a/app/views/teleproviders/index.html.haml
+++ b/app/views/teleproviders/index.html.haml
@@ -1,46 +1,52 @@
-.row
-  .col-md-12
-    .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Search
-      .grid-body.no-border
-        = search_form_for @q, :class => "form-inline" do |f| 
-          .form-group
-            = f.search_field :name_cont, :placeholder => "Search with name" 
-          .form-group
-            = f.submit "Search" ,:class => "btn btn-default"
 
 .row
-  .col-md-12
-    .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Teleproviders
-          = link_to 'Add', new_teleprovider_path, class: "btn btn-success btn-small"
-      .grid-body.no-border
-        %table.table.no-more-tables
-          %thead
-            %tr
-              = content_tag :th, sort_link(@q, :name)
-              = content_tag :th, sort_link(@q, :apn)
-              %th
-              %th
-              %th
+  .col-md-3
+    .row
+      .col-md-12
+        .page-title
+          %h3
+            &nbsp;
+    .row
+      .col-md-12
+        .grid.simple
+          .grid-title 
+            %h4
+              Search
+            .tools
+              %a.collapse{href: "javascript:;"}
+          .grid-body
+            = search_form_for @q do |f| 
+              .form-group
+                = f.search_field :name_cont, :placeholder => "Type name here" 
+              .form-group
+                = f.submit "Search" ,:class => "btn btn-default"
 
-          %tbody           
-            - @teleproviders.each do |teleprovider|
-              %tr
-                %td= teleprovider.name
-                %td= teleprovider.apn
-                %td= link_to 'Show', teleprovider
-                %td= link_to 'Edit', edit_teleprovider_path(teleprovider)
-                %td= link_to 'Destroy', teleprovider, :method => :delete, :data => { :confirm => 'Are you sure?' }
+  .col-md-9
+    .row
+      .col-md-6
+        .page-title
+          %h3
+            Teleproviders List 
+      .col-md-6  
+        .pull-right= link_to 'New', new_teleprovider_path, class: "btn btn-success"
+    .row
+      .col-md-12
+        .grid.simple
+          .grid-body.no-border
+            %table.table.no-more-tables
+              %thead
+                %tr
+                  = content_tag :th, sort_link(@q, :name)
+                  = content_tag :th, sort_link(@q, :apn)
+                  %th
+                  %th
+
+              %tbody           
+                - @teleproviders.each do |teleprovider|
+                  %tr
+                    %td= link_to teleprovider.name, teleprovider
+                    %td= teleprovider.apn
+                    %td= link_to 'Edit', edit_teleprovider_path(teleprovider)
+                    %td= link_to 'Destroy', teleprovider, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 
