--- a/app/views/work_schedules/index.html.haml
+++ b/app/views/work_schedules/index.html.haml
@@ -1,29 +1,27 @@
 .row
+  .col-md-6
+    .page-title
+      %h3
+        Work schedules List 
+  .col-md-6
+    .pull-right= link_to 'New', new_work_schedule_path, class: "btn btn-success"
+
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-title.no-border
-        %h4
-          Work Schedules
-          = link_to 'Add', new_work_schedule_path, class: "btn btn-success btn-small"
-
-        
-      .grid-body.no-border
+      .grid-body
         %table.table.no-more-tables
           %thead
             %tr
               %th Name
               %th
               %th
-              %th
 
           %tbody           
             - @work_schedules.each do |work_schedule|
               %tr
-                %td= link_to work_schedule.name, work_schedule
-                %td= link_to 'Show', work_schedule
+                %td= link_to work_schedule.name.capitalize, work_schedule
                 %td= link_to 'Edit', edit_work_schedule_path(work_schedule)
                 %td= link_to 'Destroy', work_schedule, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
